--- a/client/src/resources/css/style.css
+++ b/client/src/resources/css/style.css
@@ -65,8 +65,8 @@ section {
 
 /* ----- HEADER ----- */
 header {
-    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./img/hero-min.jpg');
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./img/hero-min.jpg');
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://polas-harbour-lounge.s3.ap-south-1.amazonaws.com/hero-min.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://polas-harbour-lounge.s3.ap-south-1.amazonaws.com/hero-min.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -350,8 +350,10 @@ input[type=submit]:active {
 /* ----------------------------------------------- */
 
 .section-testimonials {
-    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('./img/testimonal-background.jpg');
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('./img/testimonal-background.jpg');
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), 
+        url('https://polas-harbour-lounge.s3.ap-south-1.amazonaws.com/testimonal-background.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), 
+        url('https://polas-harbour-lounge.s3.ap-south-1.amazonaws.com/testimonal-background.jpg');
     background-size: cover;
     background-attachment: fixed;
 }
