--- a/client/src/resources/css/queries.css
+++ b/client/src/resources/css/queries.css
@@ -8,6 +8,11 @@
     .row { padding: 0 2%; }
 }
 
+@media only screen and (max-width: 1023px) {
+    footer p {
+        font-size: 19px;
+    }
+}
 
 /* Small tablet to big tablet: from 768px to 1023px */
 @media only screen and (max-width: 1023px) {
@@ -27,8 +32,6 @@
     .city-feature { font-size: 90%; }
     
 }
-
-
 
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
@@ -108,11 +111,12 @@
     
 }
 
-
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
 
     section { padding: 25px 0; }
 
     .nb-btn { margin-bottom: 5px; }
+
+    footer p { font-size: 11px; }
 }
