--- a/client/src/resources/css/style.css
+++ b/client/src/resources/css/style.css
@@ -424,13 +424,17 @@ cite img {
 /* Creators Section */
 /* ---------------------------------------------- */
 
+#developers .col-sm-4 {
+    margin: 0 auto;
+}
+
 .developer-info {
     font-family: sans-serif;
     font-size: 80%;
 }
 
 .developer-img img {
-    width: 90%;
+    width: 100%;
 }
 
 .developer-img h3 {
